--- a/config_example.json
+++ b/config_example.json
@@ -1,5 +1,5 @@
 {
-    "username":"",
-    "password":"",
-    "avatar":""
+    "username":"My_Username",
+    "password":"My_Password",
+    "avatar":"My_Avatar"
 }
