Commands: Add showteams

--- a/config_example.json
+++ b/config_example.json
@@ -2,5 +2,6 @@
     "username":"My_Username",
     "password":"My_Password",
     "avatar":"My_Avatar",
-    "owner":"Owner_Username"
+    "owner":"Owner_Username",
+    "teams":"https://pokepast.es/18c72f12c61c83d0"
 }
