--- a/config_example.json
+++ b/config_example.json
@@ -1,7 +1,5 @@
 {
     "username":"My_Username",
     "password":"My_Password",
-    "avatar":"My_Avatar",
-    "owner":"Owner_Username",
-    "teams":"https://pokepast.es/18c72f12c61c83d0"
+    "avatar":"My_Avatar"
 }
